--- a/chapter-1.org
+++ b/chapter-1.org
@@ -996,7 +996,7 @@ One variant of the Fermat test that cannot be fooled is called the Miller-Rabin 
 #+end_src
 
 * Exercise 1.29
-Simpson’s Rule is a more accurate method of numerical integration than the method illustrated above. Using Simpson’s Rule, the integral of a function f between a and b is approximated as \(\frac{h}{3}(y_0 + 4y_1 + 2y_2 + 4y_3 + 2y_4 + \cdots + 2y_{n−2} + 4y_{n−1} + y_n) \), where \(h = (b-a)/n \), for some even integer n, and $y_k = f(a+kh)$. (Increasing n increases the accuracy of the approximation.) Define a procedure that takes as arguments f, a, b, and n and returns the value of the integral, computed using Simpson’s Rule. Use your procedure to integrate cube between 0 and 1 (with $n=100$ and $n=1000$), and compare the results to those of the integral procedure shown above.
+Simpson’s Rule is a more accurate method of numerical integration than the method illustrated above. Using Simpson’s Rule, the integral of a function f between a and b is approximated as \(\frac{h}{3}(y_0 + 4y_1 + 2y_2 + 4y_3 + 2y_4 + \cdots + 2y_{n-2} + 4y_{n-1} + y_n) \), where \(h = (b-a)/n \), for some even integer n, and $y_k = f(a+kh)$. (Increasing n increases the accuracy of the approximation.) Define a procedure that takes as arguments f, a, b, and n and returns the value of the integral, computed using Simpson’s Rule. Use your procedure to integrate cube between 0 and 1 (with $n=100$ and $n=1000$), and compare the results to those of the integral procedure shown above.
 
 ** Solution
 #+begin_src scheme
@@ -1041,7 +1041,7 @@ The sum procedure above generates a linear recursion. The procedure can be rewri
 #+end_src
 
 * Exercise 1.31
-1. The sum procedure is only the simplest of a vast number of similar abstractions that can be captured as higher-order procedures.51 Write an analogous procedure called product that returns the product of the values of a function at points over a given range. Show how to define factorial in terms of product. Also use product to compute approximations to π using the formula
+1. The sum procedure is only the simplest of a vast number of similar abstractions that can be captured as higher-order procedures.51 Write an analogous procedure called product that returns the product of the values of a function at points over a given range. Show how to define factorial in terms of product. Also use product to compute approximations to $\pi$ using the formula
 
 \[
 \frac{\pi}{4} =
@@ -1410,7 +1410,7 @@ try #10: 4.555538647701617
 : 10
 
 * Exercise 1.38
-In 1737, the Swiss mathematician Leonhard Euler published a memoir De Fractionibus Continuis, which included a continued fraction expansion for $e−2$, where $e$ is the base of the natural logarithms. In this fraction, the $N_i$ are all 1, and the $D_i$ are successively $1, 2, 1, 1, 4, 1, 1, 6, 1, 1, 8, \cdots$. Write a program that uses your cont-frac procedure from Exercise 1.37 to approximate $e$, based on Euler’s expansion.
+In 1737, the Swiss mathematician Leonhard Euler published a memoir De Fractionibus Continuis, which included a continued fraction expansion for $e-2$, where $e$ is the base of the natural logarithms. In this fraction, the $N_i$ are all 1, and the $D_i$ are successively $1, 2, 1, 1, 4, 1, 1, 6, 1, 1, 8, \cdots$. Write a program that uses your cont-frac procedure from Exercise 1.37 to approximate $e$, based on Euler’s expansion.
 
 ** Solution
 #+begin_src scheme
@@ -1607,7 +1607,133 @@ Hint: You may find it convenient to use compose from Exercise 1.42.
 (test-equal 625 ((repeated square 2) 5))
 #+end_src
 
-* meta                                                            :noexport:
+* Exercise 1.44
+The idea of smoothing a function is an important concept in signal processing. If $f$ is a function and $dx$ is some small number, then the smoothed version of $f$ is the function whose value at a point $x$ is the average of $f(x-dx)$, $f(x)$, and $f(x+dx)$. Write a procedure smooth that takes as input a procedure that computes $f$ and returns a procedure that computes the smoothed $f$. It is sometimes valuable to repeatedly smooth a function (that is, smooth the smoothed function, and so on) to obtain the n-fold smoothed function. Show how to generate the n-fold smoothed function of any given function using smooth and repeated from Exercise 1.43.
+
+** Solution
+#+begin_src scheme
+;; from 1.43
+(define (compose f g)
+  (lambda (x) (f (g x))))
+
+(define (repeated f n)
+  (if (= n 1)
+      f
+      (compose f (repeated f (dec n)))))
+
+;; 1.44 solution
+(define (smooth f)
+  (lambda (x)
+    (let ((dx 0.00001))
+     (/
+      (+ (f (- x dx)) (f x) (f (+ x dx)))
+      3))))
+
+(define (n-fold-smooth f n)
+  ((repeated smooth n) f))
+
+(test-approximate 4 ((smooth square) 2) 0.0001)
+(test-approximate 4 ((n-fold-smooth square 3) 2) 0.0001)
+#+end_src
+
+* Exercise 1.45
+We saw in 1.3.3 that attempting to compute square roots by naively finding a fixed point of $y \mapto x/y does not converge, and that this can be fixed by average damping. The same method works for finding cube roots as fixed points of the average-damped $y \mapto x/y^2$. Unfortunately, the process does not work for fourth roots - a single average damp is not enough to make a fixed-point search for $y \mapto x/y^3$ converge. On the other hand, if we average damp twice (i.e., use the average damp of the average damp of $y \mapto x/y^3$) the fixed-point search does converge. Do some experiments to determine how many average damps are required to compute n^{th} roots as a fixed-point search based upon repeated average damping of $y \mapto x/y^{n-1}$.. Use this to implement a simple procedure for computing n^{th} roots using fixed-point, average-damp, and the repeated procedure of Exercise 1.43. Assume that any arithmetic operations you need are available as primitives.
+
+** Solution
+#+begin_src scheme
+;; from book samples
+(define tolerance 0.0001)
+(define (fixed-point f first-guess)
+  (define (close-enough? v1 v2)
+    (< (abs (- v1 v2))
+       tolerance))
+  (define (try guess)
+    (let ((next (f guess)))
+      (if (close-enough? guess next)
+          next
+          (try next))))
+  (try first-guess))
+
+(define (average x y)
+  (/ (+ x y) 2))
+
+(define (average-damp f)
+  (lambda (x)
+    (average x (f x))))
+
+;; from 1.43
+(define (compose f g)
+  (lambda (x) (f (g x))))
+
+(define (repeated f n)
+  (if (= n 1)
+      f
+      (compose f (repeated f (dec n)))))
+
+;; actual solution
+(define (halve n)
+    (if (even? n)
+        (/ n 2)
+        (/ (- n 1) 2)))
+
+(define (root n x)
+  (fixed-point
+   ((repeated average-damp (halve n))
+    (lambda (y)
+      (/ x (expt y (- n 1)))))
+   1.0))
+
+(test-approximate 13 (root 4  (expt 13 4))  0.00001)
+(test-approximate 13 (root 8  (expt 13 8))  0.0001)
+(test-approximate 13 (root 16 (expt 13 16)) 0.01)
+#+end_src
+
+* Exercise 1.46
+Several of the numerical methods described in this chapter are instances of an extremely general computational strategy known as iterative improvement. Iterative improvement says that, to compute something, we start with an initial guess for the answer, test if the guess is good enough, and otherwise improve the guess and continue the process using the improved guess as the new guess. Write a procedure iterative-improve that takes two procedures as arguments: a method for telling whether a guess is good enough and a method for improving a guess. Iterative-improve should return as its value a procedure that takes a guess as argument and keeps improving the guess until it is good enough. Rewrite the sqrt procedure of 1.1.7 and the fixed-point procedure of 1.3.3 in terms of iterative-improve.
+
+** Solution
+#+begin_src scheme
+(define (iterative-improve test improve)
+  (define (iter guess)
+    (if (test guess)
+        guess
+        (iter (improve guess))))
+  (lambda (guess)
+    (iter guess)))
+
+;; refactored sqrt
+(define (sqrt x)
+  (define (good-enough? guess)
+    (< (abs (- (square guess) x)) 0.001))
+  (define (improve guess)
+    (average guess (/ x guess)))
+  ((iterative-improve good-enough? improve)
+   1.0))
+
+;; test sqrt
+(test-approximate 1.4142 (sqrt 2) 0.0001)
+
+;; refactored fixed-point
+(define (fixed-point f first-guess)
+  (define (close-enough? v1 v2)
+    (< (abs (- v1 v2))
+       0.00001))
+  ((iterative-improve
+    (lambda (guess)
+      (close-enough? guess (f guess)))
+    f)
+   first-guess))
+
+;; test fixed-point
+(define (approximate-phi)
+  (fixed-point
+   (lambda (x) (+ 1 (/ 1 x)))
+   1.0))
+
+(test-approximate 1.61803 (approximate-phi) 0.00001)
+#+end_src
+
+* meta                                                             :noexport:
 #+PROPERTY: header-args :results output
 #+OPTIONS: todo:nil toc:nil num:nil
 #+HTML_HEAD_EXTRA: <style> img { width: 100% }</style>
